apps/site/src/styles/global.css
/* ... */
.about-cards-unit-text {
  display: flex;
  flex-direction: column;
  gap: 0.55rem;

  p {
    font-size: var(--font-md);
  }
}

.about-cards-unit_title {
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: var(--main-tx-primary);
  font-size: var(--font-md);
  font-weight: 500;
  transition: 0.2s;
}

.experience {
  width: 100vw;
  background-color: var(--main-bg-secondary);
  padding: 3.5rem clamp(2.13rem, calc(0.85rem + 1.63vw), 3.5rem);
}

.experience-wrap {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.experience-jobs {
  display: flex;
  flex-direction: column;
}

.experience-sidebar-list {
  display: flex;
  list-style: none;
  list-style-position: inside;
  font-size: 1.2rem;
  overflow: auto;
  white-space: nowrap;

  li {
    color: var(--main-tx-secondary);
    border-top: 3px solid;
    border-color: var(--grey);
    padding: 1rem;
    cursor: pointer;

    &:hover {
      background-color: var(--main-bg-primary);
    }
  }

  .active-tab {
    color: var(--main-tx-green);
    border-color: var(--green);
    background-color: var(--main-bg-primary);
  }
}

.experience-resume {
  display: flex;
  flex-direction: column;
  padding: 1.2rem 0;
  overflow: auto;

  article {
    display: flex;
    gap: 2rem;
  }
}

.experience-resume-title {
  font-size: var(--font-lg);
  font-weight: 700;

  h3 {
    span {
      color: var(--main-tx-green);
      font-size: var(--font-lg);
      font-weight: 700;
    }
  }

  span {
    color: var(--main-tx-secondary);
    font-size: var(--font-sm);
    font-weight: 500;
  }
}

.experience-resume-text {
  ul, ol, il {
    list-style-type: "𐰷 ";
    list-style-position: inside;

    li {
      margin: 1.1rem 0;

      &::marker {
        color: var(--main-tx-green);
      }
    }
  }
}

.footer {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 0.65rem;
  color: var(--grey);
  font-size: var(--font-xs);
  font-weight: 600;
  padding: 2rem;

  .footer-link-name {
    text-decoration: none;
    color: var(--main-tx-green);
    transition: 0.2s;

    &::after {
      content: '';
      width: 0px;
      height: 1px;
      display: block;
      background: var(--green);
      transition: 300ms;
    }

    &:hover::after {
      width: 100%;
    }
  }
}

/* Responsive */
@media (max-width: 450px) {
  .about-intro-tags {
    grid-template-columns: auto auto;
  }
}

@media (min-width: 768px) {
  .hero {
    place-self: center;
    min-height: calc(100vh - 112px);
    place-content: center;
  }

  .hero-greeting .hero-tldr {
    max-width: 777px;
  }
}

@media (min-width: 1201px) {
  .logomark-lg {
    display: grid;
  }

  .logomark-sm {
    display: none;
  }

  .nav-menu {
    display: flex;
  }

  .nav-hamburguer {
    display: none;
  }

  .nav-menu-mobile.open {
    display: none;
  }

  .nav-overlay {
    display: none !important;
  }

  .hero {
    place-self: center;
    min-width: 100%;
    min-height: calc(100vh - 112px);
    place-content: center;
    padding: 0;
  }

  .hero-greeting,
  .hero-tldr {
    max-width: 777px;
  }

  .about {
    height: 100vh;
    max-width: 1174px;
    flex-direction: row;
    place-items: center;
    padding: 0;
  }

  .about-intro {
    max-width: 553px;
    margin-right: 2.5rem;
  }

  .about-intro-tags {
    font-size: var(--font-sm);
  }

  .experience {
    min-height: 100vh;
    place-items: center;
    place-content: center;
    justify-content: center;
  }

  .experience-wrap {
    max-height: 75vh;
    max-width: 860px;
  }

  .experience-jobs {
    min-height: 75vh;
    flex-direction: row;
  }

  .experience-sidebar-list {
    flex-direction: column;
    margin-right: 2rem;

    li, .active-tab {
      border-top: none;
      border-left: 3px solid;
    }
  }
}

